add stuff (lol no but actually, stuff.html)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
   <div class="hb-landing-container">
-    <img class="hb-landing-bee rollover" src="./assets/Cartoon-Bee-PNG.png"/>
+    <a href="/stuff.html">
+      <img class="hb-landing-bee rollover" src="./assets/Cartoon-Bee-PNG.png" alt="a Heather bee"/>
+    </a>
   </div>
 
 </body>
