add duellingo bubble to projects page

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,12 @@
           <h2 class="hb-projects-titles">Frenchly</h2>
         </div>
       </a>
+      <a class="hb-portal" href="\\duel-lingo.herokuapp.com">
+        <div>
+          <img class="hb-portal-img" src="./assets/">
+          <h2 class="hb-projects-titles">Duel-Lingo</h2>
+        </div>
+      </a>
     </div>
 
   </div>
