--- a/projects.html
+++ b/projects.html
@@ -11,30 +11,46 @@
       <a href="/stuff.html" class="hb-nav-arrow"><img src="./assets/arrow.svg" alt="back arrow" role="navigation"></a>
 
     <div class="hb-portals">
-      <a class="hb-portal" href="\\nofrills-api.herokuapp.com">
-        <div>
-          <img class="hb-portal-img" src="./assets/Bananas.svg">
-          <h2 class="hb-projects-titles">No-Frills API</h2>
-        </div>
-      </a>
-      <a class="hb-portal" href="\\chubbo-chat.herokuapp.com">
-        <div>
-            <img class="hb-portal-img hb-portal-orbis" src="./assets/orbis.png">
-          <h2 class="hb-projects-titles">Chubbo-Chat</h2>
-        </div>
-      </a>
-      <a class="hb-portal" href="\\frenchly.herokuapp.com">
-        <div>
-          <img class="hb-portal-img hb-portal-frenchly" src="./assets/frenchly.svg">
-          <h2 class="hb-projects-titles">Frenchly</h2>
-        </div>
-      </a>
-      <a class="hb-portal" href="\\duel-lingo.herokuapp.com">
-        <div>
-          <img class="hb-portal-img" src="./assets/">
-          <h2 class="hb-projects-titles">Duel-Lingo</h2>
-        </div>
-      </a>
+      <div class="hb-portals-row">
+        <a class="hb-portal" href="\\nofrills-api.herokuapp.com">
+          <div>
+            <img class="hb-portal-img" src="./assets/Bananas.svg">
+            <h2 class="hb-projects-titles">No-Frills API</h2>
+          </div>
+        </a>
+        <a class="hb-portal" href="\\chubbo-chat.herokuapp.com">
+          <div>
+              <img class="hb-portal-img hb-portal-orbis" src="./assets/orbis.png">
+            <h2 class="hb-projects-titles">Chubbo-Chat</h2>
+          </div>
+        </a>
+        <a class="hb-portal" href="\\frenchly.herokuapp.com">
+          <div>
+            <img class="hb-portal-img hb-portal-frenchly" src="./assets/frenchly.svg">
+            <h2 class="hb-projects-titles">Frenchly</h2>
+          </div>
+        </a>
+      </div>
+      <div class="hb-portals-row">
+        <a class="hb-portal" href="https://github.com/heatherbooker/nand2tetris-guide">
+          <div>
+            <img class="hb-portal-img" src="./assets/nand.svg">
+            <h2 class="hb-projects-titles">Interactive Nand to Tetris</h2>
+          </div>
+        </a>
+        <a class="hb-portal" href="\\duel-lingo.herokuapp.com">
+          <div>
+            <img class="hb-portal-img" src="./assets/duel.svg">
+            <h2 class="hb-projects-titles">Duel-Lingo</h2>
+          </div>
+        </a>
+        <a class="hb-portal" href="\\github.com/heatherbooker/vue-sticky-scroll">
+          <div>
+            <img class="hb-portal-img hb-portal-vue" src="./assets/vue-logo.png">
+            <h2 class="hb-projects-titles">Vue Sticky-Scroll</h2>
+          </div>
+        </a>
+      </div>
     </div>
 
   </div>
