--- a/stuff.html
+++ b/stuff.html
@@ -36,10 +36,16 @@
 
 </body>
 <script>
+function getBeeWisdom() {
   const hb_bee_stuff = ['I\'m just a bee.', 'Bzzt.', 'Beedelee.', 'Better get beezee.'];
+  const beeWisdom = hb_bee_stuff[Math.floor(Math.random()*4)];
+  if (beeWisdom === document.getElementById('beeWisdom').innerText) {
+    return getBeeWisdom();
+  }
+  return beeWisdom;
+}
 document.getElementById('itsABee').onclick = function() {
-  const beeWisdom = Math.floor(Math.random()*4);
-  document.getElementById('beeWisdom').innerText = hb_bee_stuff[beeWisdom];
+  document.getElementById('beeWisdom').innerText = getBeeWisdom();
 };
 </script>
 </html>
