Replace vue-sticky-scroll with graphmarks

--- a/projects.html
+++ b/projects.html
@@ -44,10 +44,10 @@
             <h2 class="hb-projects-titles">Duel-Lingo</h2>
           </div>
         </a>
-        <a class="hb-portal" href="\\github.com/heatherbooker/vue-sticky-scroll">
+        <a class="hb-portal" href="\\github.com/heatherbooker/bookmark-visualizer">
           <div>
-            <img class="hb-portal-img hb-portal-vue" src="./assets/vue-logo.png">
-            <h2 class="hb-projects-titles">Vue Sticky-Scroll</h2>
+            <img class="hb-portal-img" src="./assets/graphmarks-logo.svg">
+            <h2 class="hb-projects-titles">Graphmarks</h2>
           </div>
         </a>
       </div>
