Add personal resume

--- a/stuff.html
+++ b/stuff.html
@@ -18,7 +18,7 @@
           <h2>Projects</h2>
         </div>
       </a>
-      <a class="hb-portal" href="https://ca.linkedin.com/in/heather-booker-1162b5b9">
+      <a class="hb-portal" href="./assets/resume.pdf">
         <div>
           <img class="hb-portal-img" src="./assets/heatherlearns.svg">
           <h2>CV</h2>
