--- a/stuff.html
+++ b/stuff.html
@@ -24,12 +24,12 @@
           <h2>CV</h2>
         </div>
       </a>
-      <div class="hb-portal" id="itsABee">
+      <a class="hb-portal" href="https://heatherbooker.github.io/blog">
         <div>
           <img class="hb-portal-img hb-portal-bee" src="./assets/Cartoon-Bee-PNG.png">
-          <h2 id="beeWisdom">Bee</h2>
+          <h2 id="beeWisdom">Bee-log</h2>
         </div>
-      </div>
+      </a>
     </div>
 
   </div>
