Replace projects page with about page
- The projects were mostly pretty outdated.

--- a/stuff.html
+++ b/stuff.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Heather Booker's Stuff</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="./styles.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 </head>
 <body>
 
   <div class="hb-stuff-page">
 
-    <a href="/" class="hb-nav-arrow"><img src="./assets/arrow.svg" alt="back arrow" role="navigation"></a>
+    <div class="hb-content">
 
-    <div class="hb-portals">
-      <a class="hb-portal" href="/projects.html">
-        <div>
-            <img class="hb-portal-img hb-portal-orbis" src="./assets/orbis.png">
-          <h2>Projects</h2>
-        </div>
-      </a>
       <a class="hb-portal" href="./assets/resume.pdf">
         <div>
           <img class="hb-portal-img" src="./assets/heatherlearns.svg">
@@ -28,6 +22,12 @@
         <div>
           <img class="hb-portal-img hb-portal-bee" src="./assets/Cartoon-Bee-PNG.png">
           <h2>Bee-log</h2>
+        </div>
+      </a>
+      <a class="hb-portal" href="./about.html">
+        <div>
+            <img class="hb-portal-img hb-portal-stars" src="./assets/stars.png">
+          <h2>More-about-me-log</h2>
         </div>
       </a>
     </div>
