Migrate stuff page to be home page
- I loved my bee, but I hate other homepages
  with something you have to click to enter.
  Takes time to load, confusing, etc. Bye bad UX!

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
   <div class="hb-about-page">
 
-    <a href="./stuff.html" class="hb-nav-arrow"><img src="./assets/arrow.svg" alt="back arrow" role="navigation"></a>
+    <a href="./index.html" class="hb-nav-arrow"><img src="./assets/arrow.svg" alt="back arrow" role="navigation"></a>
 
     <div class="hb-content">
       <h1>About me</h1>
