--- a/index.html
+++ b/index.html
@@ -2,20 +2,37 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Heather Booker</title>
-  <link href="https://fonts.googleapis.com/css?family=Uncial+Antiqua" rel="stylesheet"> 
+  <title>Heather Booker's Stuff</title>
   <link href="./styles.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 </head>
 <body>
 
-  <div class="hb-landing-container">
-    <a href="/stuff.html">
-      <img class="hb-landing-bee rollover" src="./assets/Cartoon-Bee-PNG.png" alt="a Heather bee"/>
-    </a>
+  <div class="hb-index">
+
+    <div class="hb-content">
+
+      <a class="hb-portal" href="./assets/resume.pdf">
+        <div>
+          <img class="hb-portal-img" src="./assets/heatherlearns.svg">
+          <h2>CV</h2>
+        </div>
+      </a>
+      <a class="hb-portal" href="https://heatherbooker.github.io/blog">
+        <div>
+          <img class="hb-portal-img hb-portal-bee" src="./assets/Cartoon-Bee-PNG.png">
+          <h2>Bee-log</h2>
+        </div>
+      </a>
+      <a class="hb-portal" href="./about.html">
+        <div>
+            <img class="hb-portal-img hb-portal-stars" src="./assets/stars.png">
+          <h2>More-about-me-log</h2>
+        </div>
+      </a>
+    </div>
+
   </div>
 
 </body>
-
-<script src="./index.js"></script>
-
 </html>
