Put back arrow in a topbar
- Having it as a general topbar component makes
  it easier to add stuff later.

--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@
 
   <div class="hb-about-page">
 
-    <a href="./index.html" class="hb-nav-arrow"><img src="./assets/arrow.svg" alt="back arrow" role="navigation"></a>
+    <ul class="hb-topnav">
+      <li><a href="./index.html" class="hb-nav-arrow"><img src="./assets/arrow.svg" alt="back arrow" role="navigation"></a></li>
+    </ul>
 
     <div class="hb-content">
       <h1>About me</h1>
