Add my name to index page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   <div class="hb-index">
 
+    <ul class="hb-topnav">
+      <li><h1>Heather Booker</h1></li>
+    </ul>
+
     <div class="hb-content">
 
       <a class="hb-portal" href="./assets/resume.pdf">
